// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strong [[]] is not strong 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[[]]",
        "text": "[[]]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strong Decoration in Strong notation 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[[",
        "text": "[[",
        "type": "plain",
      },
      {
        "decos": [
          "!",
        ],
        "nodes": [
          {
            "raw": "deco",
            "text": "deco",
            "type": "plain",
          },
        ],
        "raw": "[! deco]",
        "rawDecos": "!",
        "type": "decoration",
      },
      {
        "raw": "]]",
        "text": "]]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strong Simple strong 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "nodes": [
          {
            "raw": "Simple strong",
            "text": "Simple strong",
            "type": "plain",
          },
        ],
        "raw": "[[Simple strong]]",
        "type": "strong",
      },
    ],
    "type": "line",
  },
]
`;
